--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,8 @@ dependencies {
 
     /*Coil*/
     implementation("io.coil-kt:coil-compose:2.1.0")
+
+    /*Retrofit2*/
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 }
