--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext {
         compose_version = '1.1.0-beta01'
         inset_version = '0.24.9-beta'
+        nav_version = "2.4.2"
     }
     dependencies {
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
