--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,8 +64,8 @@ dependencies {
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
 
     /*Inset*/
-    implementation "com.google.accompanist:accompanist-insets-ui:$inset_version"
-    implementation "com.google.accompanist:accompanist-systemuicontroller:$inset_version"
+    implementation "com.google.accompanist:accompanist-insets-ui:$accompanist_version"
+    implementation "com.google.accompanist:accompanist-systemuicontroller:$accompanist_version"
 
 
     /*Coil*/
@@ -85,8 +85,11 @@ dependencies {
     implementation "me.vponomarenko:compose-shimmer:1.0.0"
 
     /*Placeholder*/
-    implementation "com.google.accompanist:accompanist-placeholder:$inset_version"
+    implementation "com.google.accompanist:accompanist-placeholder:$accompanist_version"
 
     /*Navigation*/
     implementation "androidx.navigation:navigation-compose:$nav_version"
+
+    /*FlowLayouts*/
+    implementation "com.google.accompanist:accompanist-flowlayout:$accompanist_version"
 }
