--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@
 buildscript {
     ext {
         compose_version = '1.1.0-beta01'
-        inset_version = '0.24.9-beta'
+        accompanist_version = '0.24.9-beta'
         nav_version = "2.4.2"
     }
     dependencies {
