--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext {
         compose_version = '1.1.0-beta01'
         accompanist_version = '0.24.9-beta'
+        roomVersion = '2.4.0-alpha03'
         nav_version = "2.4.2"
     }
     dependencies {
