--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,28 @@
 
 
 buildscript {
+
+
+
     ext {
-        compose_version = '1.1.0-beta01'
-        accompanist_version = '0.24.9-beta'
-        roomVersion = '2.4.0-alpha03'
-        nav_version = "2.4.2"
+        compose_version = '1.1.1'
+        accompanist_version = '0.24.13-rc'
+        roomVersion = '2.5.0-alpha02'
+        nav_version = '2.5.0'
     }
     dependencies {
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
+
+        classpath "org.jetbrains.kotlin:kotlin-serialization:1.6.10"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.2.0' apply false
     id 'com.android.library' version '7.2.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.5.31' apply false
+    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
 }
+
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
