--- a/settings.gradle
+++ b/settings.gradle
@@ -3,14 +3,20 @@ pluginManagement {
         gradlePluginPortal()
         google()
         mavenCentral()
+        jcenter()
+        maven {url "https://jitpack.io"}
     }
 }
+
+
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
         google()
         mavenCentral()
-        maven { url 'https://jitpack.io' }
+        jcenter()
+        maven {url "https://jitpack.io"}
+
     }
 }
 rootProject.name = "InvestWallet"
