--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,9 @@ buildscript {
     dependencies {
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
 
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10")
+        classpath 'com.android.tools.build:gradle:7.2.1'
+
         classpath "org.jetbrains.kotlin:kotlin-serialization:1.6.10"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
